WIP working on z-index issues

--- a/app/common/RangeInputs.scss
+++ b/app/common/RangeInputs.scss
@@ -28,7 +28,7 @@
 
     .number {
       display: inline-block;
-      width: 136px;
+      width: 122px;;
     }
 
     .divider {
@@ -36,7 +36,7 @@
       border-bottom: 1px solid #d1d1d1;
       display: inline-block;
       position: relative;
-      top: -21px;
+      top: -6px;
     }
   }
 }
